[package]
name = "naive-cityhash"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/psiace/naive-cityhash"
description = "A naive native 128-bit cityhash v102 implementation for clickhouse*."

[lib]
doctest = false
test = false

[dependencies]

[dev-dependencies]
criterion = "0.3.5"
fake = "2.4.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.4"
# cityhash binding
clickhouse-rs-cityhash-sys = "0.1.2"

[[bench]]
name = "basic"
harness = false
